# PureML

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  change_log.md  pyproject.toml
.pureml/: 09vlrl9dbo2npkz5.pkl  0py4zxap4bfb40ia.pkl  0uu61v0u8en14mtr.pkl  1t5aykoupgofeov5.pkl  3hif7awxiuzgm1g5.pkl  8zibz6j9rof289vg.pkl  9njpb9bsqq2sjtbp.pkl  config.pkl  f0lpz1jwjm8sjhj3.pkl  gyqu3xhfqklwv6eg.pkl  heye3c3himpzc2q5.pkl  kuv18nrs6jcokyx3.pkl  ng64dxw0q3yn2hsb.pkl  oy6m3484t3aqu63b.pkl  pure.project  qqwra6axgbsau9oy.pkl  rl4ernx53r1bjjhp.pkl  toksvov9svdk0qyl.pkl  uqvx8c1gnft413fr.pkl  vugvx2duujjahx35.pkl  wu8phg3ustcombo7.pkl  z7pglhi0jefud1bz.pkl
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
experiments/flagged/: log.csv
experiments/results_1/: config.yaml
experiments/results_2/: config.yaml  model.pkl
experiments/sample_config/: config_0.yaml  config_integrations_1.yaml
experiments/sample_project/: config.yaml
pure/config/: parser.py
pure/trainer/: gradio_run_2.py  train.py
pureml/: __init__.py
pureml/cli/: __init__.py  artifacts.py  auth.py  dataset.py  init.py  main.py  metrics.py  model.py  params.py  project.py  public.pem  secrets.py
pureml/components/: arrays.py  audio.py  auth.py  dataset.py  log.py  metrics.py  model.py  project.py  tabular.py
pureml/config/: parser.py
pureml/decorators/: __init__.py  dataset.py  load_data.py  model.py  predict.py  transformer.py
pureml/deploy/: docker.py  fastapi.py
pureml/engine/sklearn/: __init__.py  loader.py  model_base.py  ranking.py
pureml/engine/sklearn/classification/: __init__.py  config.yaml  loader.py  models.py
pureml/engine/sklearn/regression/: __init__.py  loader.py  models.py
pureml/frameworks/: model_framework.py
pureml/frameworks/model_frameworks/: __init__.py  sklearn.py
pureml/integrations/: __init__.py  integrations.py
pureml/integrations/mlflow/: __init__.py  mlflow_utils.py
pureml/integrations/mlflow/deployer/: _model_deployer.py  model_deployer.py  temp.py
pureml/models/: model_framework.py  packaging.py  packaging_utils.py
pureml/models/model_packaging/: catboost.py  keras.py  lightgbm.py  sklearn.py  xgboost.py
pureml/optimizer/: __init__.py  optimize.py
pureml/packaging/: __init__.py  model_framework.py  packaging.py
pureml/packaging/model_packaging/: custom.py  pytorch.py  pytorch_tabnet.py  sklearn.py  xgboost.py
pureml/pipeline/data/: create_pipeline.py
pureml/trainer/: gradio_run.py  train.py
pureml/utils/: config.py  constants.py  hash.py  pipeline.py
sample_config/: config_0.yaml
tests/components/: test_auth.py  test_projects.py
tests/models/saving/: test_catboost.py  test_lightgbm.py  test_pytorch.py  test_sklearn.py  test_xgboost.py
