[tool.poetry]
name = "pureml"
version = "0.1.0"
description = ""
authors = ["vamsidhar muthireddy <vamsi.muthireddy@gmail.com>"]



[tool.poetry.dependencies]
python = "^3.10 <3.11"
PyYAML = "^6.0"
pydantic = "^1.9.1"
pandas = "^1.4.3"
numpy = "^1.23.1"
gradio = "^3.1.2"
scikit-learn = "^1.1.1"
fastparquet = "^0.8.1"
pyarrow = "^8.0.0"
typer = "^0.6.1"
lightgbm = "^3.3.2"
xgboost = "^1.6.1"
catboost = "^1.0.6"


[tool.poetry.scripts]
pure = "pureml.cli.main:app"

[tool.poetry.dev-dependencies]
ipykernel = "^6.15.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
